исправление путей для деплоя

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
     if (segments.length > 0) {
       window.location.replace('/' + segments[0] + '/#/' + segments.slice(1).join('/'));
     } else {
-      window.location.replace('/webapp/demo/');
+      window.location.replace('/noxer-test-tg');
     }
   </script>
 </head>
